--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="quiz-container">
-		<h1>Coffee Tool</h1>
+		<h1>Coffee Picker</h1>
 		<p>Answer the following questions to get a coffee recommendation based on your preferences:</p>
 		<form id="coffee-form">
 			<label for="cream">How much cream do you like in your coffee?</label><br>
