--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	<div class="bg">
 	<div class="quiz-container">
 		<h1>Coffee Picker</h1>
 		<p>Answer the following questions to get a coffee recommendation based on your preferences:</p>
@@ -39,6 +40,7 @@
 		</form>
 			<div id="result-container"></div>
 	</div>
+</div>
 	<script src="answers.js"></script>
 </body>
 </html>
